client/src/index.css
body {
	margin: 0;
	padding: 0;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
		sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
		monospace;
}

#root {
	margin-left: 40px;
	margin-bottom: 40px;
	margin-top: 40px
}

.box-container {
	grid-gap: 1px;
	border: 1px solid black;
	background-color: white;
}

.stop-color {
	background-color: #DCDCDC !important;
}

.leg-color {
	background-color: pink !important;
}

.box {
	width: 100%;
	height: 100%;
	background-color: #fff;
}

.grid-container {
	display: flex;
	flex-direction: unset;
	position: relative;
}

.grid {
	display: grid;
	border: 1px solid black;
	grid-gap: 1px;
	background-color: black;
	grid-template-rows: repeat(200, 10px);
	grid-template-columns: repeat(200, 10px);
}

.truck::before {
	content: '\25CF';
	color: red;
	font-size: 10px;
	position: relative;
}

.truck {
	position: absolute;
	bottom: 0;
}

.stop-marker:before {
	content: '\25CF';
	color: blue;
	font-size: 10px;
}

.stop-marker {
	position: absolute;
	bottom: 0;
}

